--- a/comprehensive-assembly-recovery.html
+++ b/comprehensive-assembly-recovery.html
@@ -155,15 +155,20 @@
       log('')
 
       try {
-        // Assembly AI list endpoint - fetches all transcripts with pagination
-        // Use explicit limit parameter for better pagination
+        const dateRange = document.querySelector('input[name="dateRange"]:checked').value
+        const cutoffDate = getCutoffDate(dateRange)
+
+        // =============================================================
+        // PART 1: Fetch PRE-RECORDED AUDIO transcripts
+        // =============================================================
+        log('📼 Part 1: Scanning PRE-RECORDED audio transcripts...', 'info')
+        let preRecordedCount = 0
         let url = 'https://api.assemblyai.com/v2/transcript?limit=100'
         let page = 1
         let hasMore = true
-        let totalFetched = 0
 
         while (hasMore) {
-          log(`📄 Fetching page ${page}...`)
+          log(`  📄 Fetching pre-recorded page ${page}...`)
 
           const response = await fetch(url, {
             headers: { 'authorization': apiKey }
@@ -174,54 +179,120 @@
           }
 
           const data = await response.json()
-
-          // Debug: log response structure
-          console.log('API Response:', data)
-          console.log('Page details:', data.page_details)
+          console.log('Pre-recorded API Response:', data)
 
           const transcripts = data.transcripts || []
-          totalFetched += transcripts.length
-          log(`  Found ${transcripts.length} transcripts on page ${page} (total: ${totalFetched})`, 'success')
+          preRecordedCount += transcripts.length
+          log(`    Found ${transcripts.length} pre-recorded transcripts (total: ${preRecordedCount})`, 'success')
 
-          // Filter by date range if selected
-          const dateRange = document.querySelector('input[name="dateRange"]:checked').value
-          const cutoffDate = getCutoffDate(dateRange)
+          // Filter by date and add source marker
+          const filteredTranscripts = transcripts
+            .filter(t => {
+              if (dateRange === 'all') return true
+              const transcriptDate = new Date(t.created)
+              return transcriptDate >= cutoffDate
+            })
+            .map(t => ({...t, source: 'pre-recorded'}))
 
-          const filteredTranscripts = transcripts.filter(t => {
-            if (dateRange === 'all') return true
-            const transcriptDate = new Date(t.created)
-            return transcriptDate >= cutoffDate
-          })
-
-          log(`  ${filteredTranscripts.length} transcripts match date filter`)
-
+          log(`    ${filteredTranscripts.length} match date filter`)
           allTranscripts.push(...filteredTranscripts)
 
-          // Check for pagination - Assembly AI uses page_details
+          // Check pagination
           if (data.page_details && data.page_details.next_url) {
             url = data.page_details.next_url
             page++
-            log(`  Next page: ${url}`)
           } else {
-            log(`  No more pages (last page reached)`, 'success')
             hasMore = false
           }
 
-          // Safety limit - prevent infinite loops
-          if (page > 100) {
-            log('⚠️ Reached safety page limit (100 pages = 10,000 transcripts)', 'warning')
+          if (page > 100 || transcripts.length === 0) break
+        }
+
+        log(`  ✅ Pre-recorded scan complete: ${preRecordedCount} found`)
+        log('')
+
+        // =============================================================
+        // PART 2: Fetch STREAMING transcripts
+        // =============================================================
+        log('🎙️ Part 2: Scanning STREAMING transcripts...', 'info')
+        log('  Note: Assembly AI streaming transcripts are also stored in the transcript API', 'info')
+        log('  Attempting alternative methods to find streaming transcripts...', 'info')
+
+        // Try to fetch all transcripts without filters to see if streaming ones appear
+        let streamingCount = 0
+        let streamingUrl = 'https://api.assemblyai.com/v2/transcript?limit=200'
+        let streamingPage = 1
+        let hasMoreStreaming = true
+
+        const allTranscriptIds = new Set(allTranscripts.map(t => t.id))
+
+        while (hasMoreStreaming && streamingPage <= 10) {
+          log(`  📡 Fetching all transcripts page ${streamingPage} (checking for streaming)...`)
+
+          try {
+            const response = await fetch(streamingUrl, {
+              headers: { 'authorization': apiKey }
+            })
+
+            if (!response.ok) {
+              log(`    ⚠️ Could not fetch streaming page: ${response.status}`, 'warning')
+              break
+            }
+
+            const data = await response.json()
+            console.log('Streaming check API Response:', data)
+
+            const transcripts = data.transcripts || []
+
+            // Look for transcripts we haven't seen yet (might be streaming)
+            const newTranscripts = transcripts
+              .filter(t => !allTranscriptIds.has(t.id))
+              .filter(t => {
+                if (dateRange === 'all') return true
+                const transcriptDate = new Date(t.created)
+                return transcriptDate >= cutoffDate
+              })
+              .map(t => ({...t, source: 'streaming-check'}))
+
+            if (newTranscripts.length > 0) {
+              log(`    Found ${newTranscripts.length} additional transcripts`, 'success')
+              allTranscripts.push(...newTranscripts)
+              newTranscripts.forEach(t => allTranscriptIds.add(t.id))
+              streamingCount += newTranscripts.length
+            }
+
+            // Check pagination
+            if (data.page_details && data.page_details.next_url) {
+              streamingUrl = data.page_details.next_url
+              streamingPage++
+            } else {
+              hasMoreStreaming = false
+            }
+
+            if (transcripts.length === 0) hasMoreStreaming = false
+
+          } catch (streamingError) {
+            log(`    ⚠️ Streaming check error: ${streamingError.message}`, 'warning')
             break
-          }
-
-          // If we got 0 transcripts, stop
-          if (transcripts.length === 0) {
-            log('  No transcripts on this page, stopping', 'warning')
-            hasMore = false
           }
         }
 
-        log(`  Total transcripts fetched: ${totalFetched}`)
-        log(`  After date filtering: ${allTranscripts.length}`)
+        if (streamingCount > 0) {
+          log(`  ✅ Found ${streamingCount} additional transcripts (possibly streaming)`)
+        } else {
+          log(`  ℹ️ No additional streaming transcripts found via API`, 'info')
+          log(`  Note: Streaming transcripts may already be included in the pre-recorded list`, 'info')
+        }
+        log('')
+
+        // =============================================================
+        // SUMMARY
+        // =============================================================
+        const totalFetched = allTranscripts.length
+        log(`📊 TOTAL SUMMARY:`)
+        log(`  Pre-recorded: ${preRecordedCount}`)
+        log(`  Additional found: ${streamingCount}`)
+        log(`  Total unique transcripts: ${totalFetched}`)
 
         log('')
         log(`✅ SCAN COMPLETE!`, 'success')
